# interviewready

./: .gitignore  AGENTS.md  ARCHITECTURE.md  BIAS_DETECTION_TRANSPARENCY_IMPLEMENTATION.md  BIAS_TRANSPARENCY_QUICK_REF.md  DATA_FLOW_BIAS_TRANSPARENCY.md  DEPLOYMENT.md  GOVERNANCE.md  INTERVIEW_COACH_MODIFICATION.md  INTERVIEW_COACH_QUICK_REF.md  MIGRATION-PLAN.md  README.md  RESPONSIBLE_AI_REVIEW.md  docker-compose.yaml  skills-lock.json
backend/: .dockerignore  .env.example  Dockerfile  MOCK_MODE.md  README.md  mock_responses.json  pom.xml  pyproject.toml  test_invalid_answers.py  test_mock_mode.py  test_scoring.py
backend/app/: __init__.py  main.py  mock_responses.json
backend/app/agents/: OBSERVE_GUIDE.md  README.md  __init__.py  base.py  content_strength.py  edit_plan.py  eval_rubrics.py  extractor.py  gemini_live.py  gemini_service.py  interview_coach.py  job_alignment.py  llm_judge.py  mock_config.py  mock_gemini_service.py  registry.py  resume_critic.py
backend/app/api/: __init__.py
backend/app/core/: auth.py  config.py  constants.py  firebase.py  langfuse_client.py  limiter.py  logging.py  security_constants.py
backend/app/db/: __init__.py  models.py
backend/app/governance/: __init__.py  bias_detection_service.py  explainability_service.py  hallucination_evaluation_service.py  sharp_governance_service.py
backend/app/models/: __init__.py  agent.py  base.py  database.py  resume.py  session.py
backend/app/orchestration/: __init__.py  orchestration_agent.py  persistence.py
backend/tests/: test_agent_evals.py  test_agent_structural_checks.py  test_agents.py  test_api_endpoints.py  test_bias_detection_transparency.py  test_interview_coach.py  test_interview_coach_summary_fallback.py  test_orchestration_governance.py  test_resume_input_priority.py  test_security.py
(+135 files in other folders)
